--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -7,8 +7,8 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
-    <script th:src="@{/js/storeDetail.js}"></script>
-    <link th:href="@{/css/storeDetail.css}" rel="stylesheet">
+    <script th:src="@{/js/store/storeDetail.js}"></script>
+    <link th:href="@{/css/store/storeDetail.css}" rel="stylesheet">
 
 </head>
 <body>
