--- a/src/main/resources/templates/store/store-list.html
+++ b/src/main/resources/templates/store/store-list.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/storeList.js}"></script>
-    <link th:href="@{/css/storeList.css}" rel="stylesheet">
+    <script th:src="@{/js/store/storeList.js}"></script>
+    <link th:href="@{/css/store/storeList.css}" rel="stylesheet">
     <title>지점 목록</title>
 </head>
 <body>
