--- a/src/main/resources/templates/store/store-register.html
+++ b/src/main/resources/templates/store/store-register.html
@@ -7,8 +7,8 @@
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
-    <script th:src="@{/js/storeRegister.js}"></script>
-    <link th:href="@{/css/storeRegister.css}" rel="stylesheet">
+    <script th:src="@{/js/store/storeRegister.js}"></script>
+    <link th:href="@{/css/store/storeRegister.css}" rel="stylesheet">
     <title>지점 등록</title>
 </head>
 <body>
