--- a/src/main/resources/static/css/store/storeOrderList.css
+++ b/src/main/resources/static/css/store/storeOrderList.css
@@ -15,8 +15,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 1000px;
+    width: 95%;
+    min-width: 1000px;
     position: relative;
 }
 
@@ -39,11 +39,14 @@ h1 {
     font-size: 1.2rem;
     font-weight: bold;
 }
-#refresh-btn {
+.btn-group {
     position: absolute;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.btn{
     background: none;
     border: none;
     cursor: pointer;
@@ -52,7 +55,9 @@ h1 {
 #board {
     margin-top: 20px;
 }
-
+#board >p{
+    text-align: center;
+}
 table {
     width: 100%;
     border-collapse: collapse;
