--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -40,7 +40,9 @@
     <div class="dropdown">
         <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
         <div class="dropdown-menu">
-            <a href="/admin" class="dropdown-item">관리자 페이지</a>
+            <a href="/admin/menu" class="dropdown-item">메뉴 관리 페이지</a>
+            <a href="/store/list" class="dropdown-item">지점 관리 페이지</a>
+            <a href="/store/order" class="dropdown-item">주문 관리 페이지</a>
             <a href="/" class="dropdown-item">라이더 페이지</a>
         </div>
     </div>
