--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -9,7 +9,7 @@
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/auth/profile.js}"></script>
   <script th:src="@{/js/findAddress.js}"></script>
-  <script th:src="@{/js/storeList.js}"></script>
+  <script th:src="@{/js/store/storeList.js}"></script>
   <script th:src="@{/js/order/orderDetail.js}"></script>
 </head>
 <body>
