--- a/src/main/resources/templates/store/store-order-list.html
+++ b/src/main/resources/templates/store/store-order-list.html
@@ -9,10 +9,10 @@
     <script th:src="@{/js/common.js}"></script>
 
     <!-- 주문 목록 전용 스크립트 -->
-    <script th:src="@{/js/storeOrderList.js}"></script>
+    <script th:src="@{/js/store/storeOrderList.js}"></script>
 
     <!-- 공용 CSS 스타일 -->
-    <link th:href="@{/css/storeOrderList.css}" rel="stylesheet"/>
+    <link th:href="@{/css/store/storeOrderList.css}" rel="stylesheet"/>
 
     <title>지점 주문 목록</title>
 </head>
@@ -23,22 +23,26 @@
             <span id="welcome-text">지점 주문 목록</span>
             <span id="order-count">(0)</span>
         </h1>
-
-        <button id="refresh-btn" class="btn">🔄새로고침</button>
+        <div class="btn-group">
+            <button id="refresh-btn" class="btn">🔄새로고침</button>
+            <button id="confirm-btn" class="btn" onClick={remoteOrder("confirm")}>수락</button>
+            <button id="cancel-btn" class="btn" onClick={remoteOrder("cancel")}>취소</button>
+            <button id="cooking-btn" class="btn" onClick={remoteOrder("cooking")}>조리</button>
+        </div>
     </div>
 
     <div id="board">
+        <p>※ 주문 정보 조작은 최상단의 주문을 조작합니다!!</p>
         <table>
             <thead>
             <tr>
                 <th>주문번호</th>
                 <th>고객번호</th>
-                <th>결제수단</th>
                 <th>상태</th>
                 <th>주문일시</th>
                 <th>예약일시</th>
-                <th>아이템 수</th>
-                <th>상세보기</th>
+                <th>내역</th>
+                <th>배송지</th>
             </tr>
             </thead>
             <tbody id="storeContent">
