--- a/src/main/resources/templates/menu/sideMenuCustomerList.html
+++ b/src/main/resources/templates/menu/sideMenuCustomerList.html
@@ -28,6 +28,7 @@
 <nav class="navbar">
     <div class="navbar-links">
         <a href="/" class="nav-link">메뉴 소개</a>
+        <a href="/side" class="nav-link">사이드</a>
         <a href="/" class="nav-link">이용 방법</a>
         <a href="/" class="nav-link">새소식</a>
         <a href="/" class="nav-link">SAND-IT</a>
