--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>완제품 주문 페이지</title>
+    <title>주문 페이지</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<h1>완제품 장바구니 주문</h1>
+<h1>장바구니 주문</h1>
 
 <div id="cartContainer">
     <!-- 여기에 장바구니 아이템들이 JS로 렌더링됨 -->
