--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -15,6 +15,9 @@
     <div class="header-container">
         <h1 id="welcome-message"></h1>
     </div>
+    <div class="header-logo">
+        <a href="/" class="site-title">SAND-IT</a>
+    </div>
     <div class="group-btn">
         <button class="update-btn" id="updateProfileBtn">수정하기</button>
     </div>
