--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -18,9 +18,6 @@
         <a href="/" class="site-title">SAND-IT</a>
     </div>
     <div class="header-right">
-        <a href="/member/login" class="header-link">로그인</a>
-        <a href="/member/join" class="header-link">회원가입</a>
-        <a href="/cart" class="header-link">장바구니</a>
     </div>
 </header>
 
@@ -36,13 +33,20 @@
         <a href="/" class="nav-link">온라인 주문</a>
 
     </div>
-    <div class="dropdown">
-        <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
-        <div class="dropdown-menu">
-            <a href="/admin/menu" class="dropdown-item">메뉴 관리 페이지</a>
-            <a href="/store/list" class="dropdown-item">지점 관리 페이지</a>
-            <a href="/store/order" class="dropdown-item">주문 관리 페이지</a>
-            <a href="/" class="dropdown-item">라이더 페이지</a>
+    <div class="management-section">
+        <div class="dropdown-delivery">
+            <a href="#" class="nav-link dropdown-toggle">DELIVERY</a>
+            <div class="dropdown-menu">
+                <a href="/delivery" class="dropdown-item">라이더 페이지</a>
+            </div>
+        </div>
+        <div class="dropdown-admin">
+            <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
+            <div class="dropdown-menu">
+                <a href="/admin/menu" class="dropdown-item">메뉴 관리 페이지</a>
+                <a href="/store/list" class="dropdown-item">지점 관리 페이지</a>
+                <a href="/store/order" class="dropdown-item">주문 관리 페이지</a>
+            </div>
         </div>
     </div>
 </nav>
