--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0a9cdd5535d7bb018489c5662b3b5ae"></script>
+    <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/auth/profile.js}"></script>
     <script th:src="@{/js/kakaoMobility.js}"></script>
@@ -19,6 +22,7 @@
         <a href="/" class="site-title">SAND-IT</a>
     </div>
     <div class="group-btn">
+        <button class="delete-btn" id="deleteBtn">회원탈퇴</button>
         <button class="update-btn" id="updateProfileBtn">수정하기</button>
     </div>
 </header>
