--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -38,8 +38,8 @@
 
         <div class="cart-actions">
             <button type="button" id="deleteSelected">선택 삭제</button>
-            <button type="button" id="checkout">결제하기</button>
-            <button type="button" id="backToHome">주문 화면</button>
+            <button type="button" id="backToHome">메인 화면</button>
+            <button type="button" id="checkout">주문 하기</button>
         </div>
     </form>
 </div>
