--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -102,10 +102,13 @@
         </div>
         <div id="selection-summary" style="margin-top: 10px; font-size: 15px; color: #333;">
             🍞 <strong>선택한 구성:</strong> <span id="selectionText">선택 항목이 없습니다.</span>
+
         </div>
-        <button type="submit" class="btn" id="submitBtn">장바구니에 담기</button>
-        <button type="button" class="btn cancel-btn" onclick="location.href='/cart'">장바구니</button>
-        <button type="button" class="btn main-btn" onclick="location.href='/'">홈으로</button>
+            <div>
+        <button type="submit" class="btn btn-primary" id="submitBtn">장바구니 담기</button>
+        <button type="button" class="btn btn-secondary cancel-btn" onclick="location.href='/cart'">장바구니</button>
+        <button type="button" class="btn btn-danger main-btn" onclick="location.href='/'">홈으로</button>
+
     </div>
 </form>
 
