--- a/src/main/resources/templates/menu/menuForCustomer.html
+++ b/src/main/resources/templates/menu/menuForCustomer.html
@@ -14,7 +14,7 @@
 <nav class="navbar">
     <div class="navbar-title">SAND-IT 메뉴 상세</div>
     <div class="navbar-links">
-        <a href="/" class="nav-link">홈</a>
+        <a href="/" class="nav-link">메인 화면</a>
     </div>
 </nav>
 
