--- a/src/main/resources/static/css/menu/menuforCustomer.css
+++ b/src/main/resources/static/css/menu/menuforCustomer.css
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar-title {
-    font-size: 1.6rem;
+    font-size: 36px;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -29,7 +29,7 @@ body {
     text-decoration: none;
     margin-left: 1.2rem;
     font-weight: 500;
-    font-size: 0.95rem;
+    font-size: 20px;
     transition: color 0.3s ease;
 }
 
@@ -110,3 +110,4 @@ body {
     border: 2px solid #8b5e3c;  /* 강조를 위해 테두리 추가 (선택) */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  /* 약간의 그림자 효과 (선택) */
 }
+
