--- a/src/main/resources/templates/menu/sideMenuCustomerList.html
+++ b/src/main/resources/templates/menu/sideMenuCustomerList.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- SweetAlert2 CDN 추가 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/menu/sideMenuCustomerList.js}"></script>
-    <link rel="stylesheet" th:href="@{/css/menu/sideMenuCustomerList.css}">
+    <link rel="stylesheet" th:href="@{/css/menu/menuCustomerList.css}">
 </head>
 <body>
 
@@ -18,9 +21,6 @@
         <a href="/" class="site-title">SAND-IT</a>
     </div>
     <div class="header-right">
-        <a href="/member/login" class="header-link">로그인</a>
-        <a href="/member/join" class="header-link">회원가입</a>
-        <a href="/cart" class="header-link">장바구니</a>
     </div>
 </header>
 
@@ -36,11 +36,20 @@
         <a href="/" class="nav-link">온라인 주문</a>
 
     </div>
-    <div class="dropdown">
-        <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
-        <div class="dropdown-menu">
-            <a href="/admin" class="dropdown-item">관리자 페이지</a>
-            <a href="/" class="dropdown-item">라이더 페이지</a>
+    <div class="management-section">
+        <div class="dropdown-delivery">
+            <a href="#" class="nav-link dropdown-toggle">DELIVERY</a>
+            <div class="dropdown-menu">
+                <a href="/delivery" class="dropdown-item">라이더 페이지</a>
+            </div>
+        </div>
+        <div class="dropdown-admin">
+            <a href="#" class="nav-link dropdown-toggle">ADMIN</a>
+            <div class="dropdown-menu">
+                <a href="/admin" class="dropdown-item">메뉴 관리 페이지</a>
+                <a href="/store/list" class="dropdown-item">지점 관리 페이지</a>
+                <a href="/store/order" class="dropdown-item">주문 관리 페이지</a>
+            </div>
         </div>
     </div>
 </nav>
@@ -50,6 +59,9 @@
 
 <!-- ✅ 메뉴 전체 컨테이너 -->
 <div class="menu-container">
+    <!-- ✅ 커스텀 샌드위치 -->
+
+
     <!-- ✅ 일반 메뉴는 JS에서 동적으로 삽입됨 -->
 </div>
 
