--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -44,9 +44,7 @@
             <thead>
             <tr>
                 <th>번호</th>
-                <th>주문일시</th>
-                <th>예약일시</th>
-                <th>내역</th>
+                <th>주문번호</th>
                 <th>출발지</th>
                 <th>배송지</th>
                 <th>액션</th>
