--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -78,6 +78,8 @@
             <label for="role">역할 선택</label>
             <select id="role" required>
                 <option value="ROLE_USER">일반 사용자</option>
+                <option value="ROLE_DELIVERY">라이더</option>
+                <option value="ROLE_MANAGER">매니저</option>
                 <option value="ROLE_ADMIN">관리자</option>
             </select>
         </div>
